Adds App Title & Test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,6 @@
-<style>
-  body {
-    width: 100%;
-    margin: 0 !important;
-    padding: 1em;
-  }
-  table {
-    font-size: 5vmin;
-    width: 50vw
-  }
-  td, th {
-    padding: 1em;
-    text-align: left;
-  }
-  h1 {
-    margin-top: 0
-  }
-</style>
 <section>
   <header>
-    <h1>Cigna Coding Challenge</h1>
+    <h1>{{ title }}</h1>
   </header>
 </section>
 <main>
