Adds Doctor Component
# Conflicts:
#	src/assets/data.json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,20 +5,6 @@
 </section>
 <main>
   <section>
-    <h2>Physician's Hall of Fame</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Specialty</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Louis Pasteur</td>
-          <td>Molecular Biology</td>
-        </tr>
-      </tbody>
-    </table>
+    <app-doctors></app-doctors>
   </section>
 </main>
