--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Raleway, sans-serif !important;
+}
+
 body {
   width: 100%;
   margin: 0 !important;
@@ -5,5 +9,15 @@ body {
 }
 
 h1 {
+  font-size: calc(3em + 1vw);
   margin-top: 0
+}
+
+section header {
+  width: 100%;
+  text-align: center;
+}
+
+header img {
+  width: 60%;
 }
