--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <section>
   <header>
+    <div>
+        <img src="assets/cigna-logo-wallpaper.jpg">
+    </div>
     <h1>{{ title }}</h1>
   </header>
 </section>
