--- a/src/app/components/doctors/doctors.component.css
+++ b/src/app/components/doctors/doctors.component.css
@@ -1,9 +1,34 @@
 table {
   font-size: calc(1em + 1vw);
-  width: 100vw
+  width: 80vw;
+  margin: 0 auto;
+  border: 1px solid #ccc;
 }
 
 td, th {
   padding: 1em;
   text-align: left;
+}
+
+td {
+  width: 50%;
+}
+
+thead {
+  background: rgba(0,0,0,0.2);
+}
+
+tr:nth-child(even) {
+  background: rgba(0,0,0,0.2);
+}
+
+h2 {
+  width: 100%;
+  text-align: center;
+  font-size: calc(1em + 3vmax);
+}
+
+app-doctors section {
+  width: 100%;
+  text-align: center;
 }
