--- a/src/app/components/doctors/doctors.component.html
+++ b/src/app/components/doctors/doctors.component.html
@@ -1,15 +1,20 @@
-<h2>{{ title }}</h2>
-<table>
-  <thead>
-  <tr>
-    <th>{{ tableHeaders.name }}</th>
-    <th>{{ tableHeaders.specialty }}</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let doctor of doctors">
-    <td>{{ doctor.name }}</td>
-    <td>{{ doctor.specialty }}</td>
-  </tr>
-  </tbody>
-</table>
+<div *ngIf="doctors$">
+  <h2>{{ title }}</h2>
+  <section>
+    <table>
+      <thead>
+      <tr>
+        <th>{{ tableHeaders.name }}</th>
+        <th>{{ tableHeaders.specialty }}</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let doctor of doctors$ | async">
+        <td>{{ doctor.name }}</td>
+        <td>{{ doctor.specialty }}</td>
+      </tr>
+      </tbody>
+    </table>
+  </section>
+</div>
+
